--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </p>
         <h4><a href="./Public/Beach volley.html">Hobbies</a></h4>
         <footer>
-            <p>Mathias Ayala</p>
+            <p>© Mathias Ayala. All rights reserved.</p>
         </footer>
     </body>
 </html>
